@@ -1,3 +1,8 @@
+2005-07-16  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR fortran/13257
+	* comma_format_extension_[1234].f: New tests.
+
 2005-07-16  Joseph S. Myers  <joseph@codesourcery.com>
 
 	PR c/22421
