@@ -1,3 +1,9 @@
+2005-07-16  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR fortran/13257
+	* format.c (parse_format_list): Allow an optional comma
+	between descriptors.
+
 2005-07-15  Thomas Koenig  <Thomas.Koenig@online.de>
 
 	Backport from mainline.
